securityConfiguration 配置白名单api 数据库不支持的字符集解决：加入对应的pom 创建表和初始数据

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,15 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/cn.easyproject/orai18n -->
+        <dependency>
+            <groupId>cn.easyproject</groupId>
+            <artifactId>orai18n</artifactId>
+            <version>12.1.0.2.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>io.github.jhipster</groupId>
             <artifactId>jhipster-framework</artifactId>
@@ -644,6 +653,9 @@
                             <artifactId>javassist</artifactId>
                             <version>${javassist.version}</version>
                         </dependency>
+
+
+
                     </dependencies>
                 </plugin>
                 <plugin>
