--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,10 @@
     <!-- jhipster-needle-distribution-management -->
 
     <properties>
+
         <!-- Build properties -->
+
+        <fastjson.version>1.2.39</fastjson.version>
         <maven.version>3.3.9</maven.version>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,6 +103,22 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <!-- commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/cn.easyproject/orai18n -->
         <dependency>
             <groupId>cn.easyproject</groupId>
