--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -29,7 +29,7 @@ spring:
   devtools:
     restart:
       enabled: true
-      additional-exclude: static/**
+      additional-exclude: src/main/java
     livereload:
       enabled: false # we use Webpack dev server + BrowserSync for livereload
   jackson:
