--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,11 +37,17 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:oracle:thin:@10.8.1.120:1521:orcl
-    username: bpm
+#    url: jdbc:oracle:thin:@10.8.1.120:1521:orcl
+#    username: bpm
 #    username: system
-    password: bpm
+#    password: bpm
 #    password: password
+    driverClassName:  com.mysql.jdbc.Driver
+    url: jdbc:mysql://rds34-mysql-shinho-dcloud-sale-dev.c0dvigf5kjq0.rds.cn-north-1.amazonaws.com.cn:3306/sl?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+    username: sl
+    password: sl@aws20190618
+
+
     hikari:
       poolName: Hikari
       auto-commit: false
