--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>8.0.12</scope>
         </dependency>-->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
